--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/kaslaanka"]
 	path = themes/kaslaanka
 	url = https://github.com/M1cR0xf7/kaslaanka.git
+[submodule "themes/themes/kaslaanka"]
+	path = themes/themes/kaslaanka
+	url = https://github.com/M1cR0xf7/kaslaanka.git
