Fix GA config and finish Spring Data post

--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -4,6 +4,8 @@ languageCode: en-us
 title: "Spring Boot Guides"
 author: Florian M.
 
+enableRobotsTXT: true
+
 params:
   sitename: "Spring Boot Guides"
   copyrights: Florian M.
@@ -15,8 +17,3 @@ menu:
     - name: Home
       url: /
       weight: 1
-    - name: Personal Website
-      url: https://florian-moehle.de
-      weight: 2
-
-googleAnalytics: "G-E52YHHLZG3"
